applyBasalPercentConstraints reactor & tests part1